# sage

./: .gitignore  CLAUDE.md  README.md  analysis.sh  analysis_prompt.md  citation_prompt.md  example.env  generate.sh  improve_prompt.sh  improve_prompt_template.md  improve_prompt_template_step1.md  improve_prompt_template_step2.md  plan.md  prompt.md  pyproject.toml  run_pipeline.sh  upload_langsmith.sh
frontend/: README.md  package.json  pnpm-lock.yaml  run-dev.sh
frontend/api/: config.py  main.py  models.py
frontend/api/services/: citation_service.py  kb_store.py  review_store.py  upload_service.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CitationOverride.tsx  DetailPanel.tsx  ItemRow.tsx  KeyboardHandler.tsx  MetadataSection.tsx  ResizablePanels.tsx  Sidebar.tsx  SourceViewer.tsx  Toolbar.tsx  UploadModal.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: reviewStore.ts
helpers/: upload_langsmith.py  validate.py
